prod/preview-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: vote-preview
  labels:
    role: vote
spec:
  selector:
    app: vote
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30300
  type: NodePort
